libs/config/tests/snapshots/rapify__config_rapify_cba_multiline-2.snap
---
source: libs/config/tests/rapify.rs
expression: config.to_string()
---
multiline = "why" \n "is" \n "this" \n "a" \n "thing";
singleline = "why\nis\nthis\na\nthing";
