libs/config/tests/snapshots/rapify__config_rapify_delete_class-2.snap
---
source: libs/config/tests/rapify.rs
expression: config.to_string()
---
class thing {
    value = 123;
    delete hello;
};
delete world;
