libs/config/tests/snapshots/rapify__config_rapify_delete_class.snap
---
source: libs/config/tests/rapify.rs
expression: config
---
Config(
    [
        Spanned {
            inner: Class(
                Spanned {
                    inner: Local {
                        name: Spanned {
                            inner: Ident(
                                "thing",
                            ),
                            span: 0..0,
                        },
                        parent: None,
                        properties: [
                            Spanned {
                                inner: Entry {
                                    name: Spanned {
                                        inner: Ident(
                                            "value",
                                        ),
                                        span: 0..0,
                                    },
                                    value: Spanned {
                                        inner: Number(
                                            Int32(
                                                123,
                                            ),
                                        ),
                                        span: 0..0,
                                    },
                                    expected_array: false,
                                },
                                span: 0..0,
                            },
                            Spanned {
                                inner: Delete(
                                    Spanned {
                                        inner: Ident(
                                            "hello",
                                        ),
                                        span: 0..0,
                                    },
                                ),
                                span: 0..0,
                            },
                        ],
                        err_missing_braces: false,
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
        Spanned {
            inner: Delete(
                Spanned {
                    inner: Ident(
                        "world",
                    ),
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
    ],
)
