libs/config/tests/snapshots/rapify__config_rapify_eval-2.snap
---
source: libs/config/tests/rapify.rs
expression: config.to_string()
---
value = __EVAL(getResolution select 0);
values[] = {__EVAL(getResolution select 0), __EVAL(getResolution select 1)};
