libs/config/tests/snapshots/rapify__config_rapify_eval.snap
---
source: libs/config/tests/rapify.rs
expression: config
---
Config(
    [
        Entry {
            name: Ident {
                value: "value",
                span: 20..26,
            },
            value: Expression(
                Expression {
                    value: "getResolution select 0",
                    span: 26..49,
                },
            ),
            expected_array: false,
        },
        Entry {
            name: Ident {
                value: "values",
                span: 50..57,
            },
            value: Array(
                Array {
                    expand: false,
                    items: [
                        Expression(
                            Expression {
                                value: "getResolution select 0",
                                span: 59..82,
                            },
                        ),
                        Expression(
                            Expression {
                                value: "getResolution select 1",
                                span: 83..106,
                            },
                        ),
                    ],
                    span: 57..106,
                },
            ),
            expected_array: true,
        },
    ],
)
