libs/config/tests/snapshots/rapify__config_rapify_external_class-2.snap
---
source: libs/config/tests/rapify.rs
expression: config.to_string()
---
class test;
class thing: test {
    value = 12;
};
class thing2 {
    class things;
};
class another: thing {};
class yet: another {
    class things {};
};
