libs/config/tests/snapshots/rapify__config_rapify_inheritence_array_extend-2.snap
---
source: libs/config/tests/rapify.rs
expression: config.to_string()
---
class external;
class local: external {
    extend[] += {"item1", "item2"};
    complete[] = {"item3", "item4"};
};
class solo {
    extend[] += {"item1", "item2"};
    complete[] = {"item3", "item4", "item5"};
};
