libs/config/tests/snapshots/rapify__config_rapify_inheritence_array_extend.snap
---
source: libs/config/tests/rapify.rs
expression: config
---
Config(
    [
        Spanned {
            inner: Class(
                Spanned {
                    inner: External {
                        name: Spanned {
                            inner: Ident(
                                "external",
                            ),
                            span: 0..0,
                        },
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
        Spanned {
            inner: Class(
                Spanned {
                    inner: Local {
                        name: Spanned {
                            inner: Ident(
                                "local",
                            ),
                            span: 0..0,
                        },
                        parent: Some(
                            Spanned {
                                inner: Ident(
                                    "external",
                                ),
                                span: 0..0,
                            },
                        ),
                        properties: [
                            Spanned {
                                inner: Entry {
                                    name: Spanned {
                                        inner: Ident(
                                            "extend",
                                        ),
                                        span: 0..0,
                                    },
                                    value: Spanned {
                                        inner: Array(
                                            Array {
                                                expand: true,
                                                items: Spanned {
                                                    inner: [
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item1",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item2",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                    ],
                                                    span: 0..0,
                                                },
                                            },
                                        ),
                                        span: 0..0,
                                    },
                                    expected_array: true,
                                },
                                span: 0..0,
                            },
                            Spanned {
                                inner: Entry {
                                    name: Spanned {
                                        inner: Ident(
                                            "complete",
                                        ),
                                        span: 0..0,
                                    },
                                    value: Spanned {
                                        inner: Array(
                                            Array {
                                                expand: false,
                                                items: Spanned {
                                                    inner: [
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item3",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item4",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                    ],
                                                    span: 0..0,
                                                },
                                            },
                                        ),
                                        span: 0..0,
                                    },
                                    expected_array: true,
                                },
                                span: 0..0,
                            },
                        ],
                        err_missing_braces: false,
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
        Spanned {
            inner: Class(
                Spanned {
                    inner: Local {
                        name: Spanned {
                            inner: Ident(
                                "solo",
                            ),
                            span: 0..0,
                        },
                        parent: None,
                        properties: [
                            Spanned {
                                inner: Entry {
                                    name: Spanned {
                                        inner: Ident(
                                            "extend",
                                        ),
                                        span: 0..0,
                                    },
                                    value: Spanned {
                                        inner: Array(
                                            Array {
                                                expand: true,
                                                items: Spanned {
                                                    inner: [
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item1",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item2",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                    ],
                                                    span: 0..0,
                                                },
                                            },
                                        ),
                                        span: 0..0,
                                    },
                                    expected_array: true,
                                },
                                span: 0..0,
                            },
                            Spanned {
                                inner: Entry {
                                    name: Spanned {
                                        inner: Ident(
                                            "complete",
                                        ),
                                        span: 0..0,
                                    },
                                    value: Spanned {
                                        inner: Array(
                                            Array {
                                                expand: false,
                                                items: Spanned {
                                                    inner: [
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item3",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item4",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                        Spanned {
                                                            inner: Str(
                                                                Str(
                                                                    "item5",
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                    ],
                                                    span: 0..0,
                                                },
                                            },
                                        ),
                                        span: 0..0,
                                    },
                                    expected_array: true,
                                },
                                span: 0..0,
                            },
                        ],
                        err_missing_braces: false,
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
    ],
)
