libs/config/tests/snapshots/rapify__config_rapify_join-2.snap
---
source: libs/config/tests/rapify.rs
expression: config.to_string()
---
class myclass {
    value = 1;
    test[] = {1, 3};
};
