libs/config/tests/snapshots/rapify__config_rapify_join.snap
---
source: libs/config/tests/rapify.rs
expression: config
---
Config(
    [
        Spanned {
            inner: Class(
                Spanned {
                    inner: Local {
                        name: Spanned {
                            inner: Ident(
                                "myclass",
                            ),
                            span: 0..0,
                        },
                        parent: None,
                        properties: [
                            Spanned {
                                inner: Entry {
                                    name: Spanned {
                                        inner: Ident(
                                            "value",
                                        ),
                                        span: 0..0,
                                    },
                                    value: Spanned {
                                        inner: Number(
                                            Int32(
                                                1,
                                            ),
                                        ),
                                        span: 0..0,
                                    },
                                    expected_array: false,
                                },
                                span: 0..0,
                            },
                            Spanned {
                                inner: Entry {
                                    name: Spanned {
                                        inner: Ident(
                                            "test",
                                        ),
                                        span: 0..0,
                                    },
                                    value: Spanned {
                                        inner: Array(
                                            Array {
                                                expand: false,
                                                items: Spanned {
                                                    inner: [
                                                        Spanned {
                                                            inner: Number(
                                                                Int32(
                                                                    1,
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                        Spanned {
                                                            inner: Number(
                                                                Int32(
                                                                    3,
                                                                ),
                                                            ),
                                                            span: 0..0,
                                                        },
                                                    ],
                                                    span: 0..0,
                                                },
                                            },
                                        ),
                                        span: 0..0,
                                    },
                                    expected_array: true,
                                },
                                span: 0..0,
                            },
                        ],
                        err_missing_braces: false,
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
    ],
)
